added aws load balancer

--- a/charts/minecraft-bedrock/Chart.yaml
+++ b/charts/minecraft-bedrock/Chart.yaml
@@ -22,3 +22,4 @@ annotations:
       url: https://github.com/itzg/docker-minecraft-bedrock-server
     - name: Image DockerHub
       url: https://hub.docker.com/r/itzg/minecraft-bedrock-server
+  service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
